# imgui_cmake

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: boilerplate.cpp  imconfig_custom.h
tests/: CMakeLists.txt  main.cpp
